--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,13 @@
             </LinearLayout>
 
 
-
+        <Button
+            android:id="@+id/add_rule"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:text="ADD RULE" />
 
         <ListView
             android:id="@+id/player_list"
@@ -56,9 +62,6 @@
             android:id="@+id/start_game"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
-
-
-
 
 
     </LinearLayout>
