--- a/app/src/main/res/layout/add_rule_activity.xml
+++ b/app/src/main/res/layout/add_rule_activity.xml
@@ -21,17 +21,18 @@ tools:context="com.example.leove.beeramide.AddRuleActivity">
         android:text="ADD A RULE"
         android:textSize="40dp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="Pour qu'une règle marche vous devez écrire votre règle comme vous le souhaitez mais en ajoutant -Player 1- et -Player 2- qui correspondront aux joueurs choisit aléatoirement dans le jeu."
+        android:textSize="20dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.3"
-            android:text="Player "
-            android:textSize="20dp"/>
 
         <EditText
             android:layout_width="0dp"
@@ -39,18 +40,13 @@ tools:context="com.example.leove.beeramide.AddRuleActivity">
             android:layout_weight="0.8"
             android:id="@+id/newRule" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.3"
-            android:text="Player "
-            android:textSize="20dp"/>
 
         <Button
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.2"
-            android:id="@+id/add_rule"/>
+            android:id="@+id/add_rule"
+            android:text="Enter"/>
 
     </LinearLayout>
 
