--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical">
 
 
@@ -17,27 +18,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
+            android:text="BEERAMIDE"
+            android:textSize="40dp" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
             android:text="PLAYER NAME"
-            android:textSize="40dp"/>
+            android:textSize="20dp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-                <EditText
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.8"
-                    android:id="@+id/player_name" />
+            <EditText
+                android:id="@+id/player_name"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.8" />
 
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.2"
-                    android:id="@+id/add_player"/>
+            <Button
+                android:id="@+id/add_player"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.2" />
 
-            </LinearLayout>
+        </LinearLayout>
 
 
         <Button
@@ -52,16 +62,15 @@
             android:id="@+id/player_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30dp">
-        </ListView>
+            android:textSize="30dp"></ListView>
 
         <Button
+            android:id="@+id/start_game"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="START GAME"
-            android:id="@+id/start_game"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:text="START GAME" />
 
 
     </LinearLayout>
