--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,24 @@
             android:layout_alignParentStart="true"
             android:text="ADD RULE" />
 
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="Number of turns :"
+            android:textSize="20dp" />
+
+        <EditText
+            android:id="@+id/nb_turns"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:inputType="number"
+            android:text="15" />
+
         <ListView
             android:id="@+id/player_list"
             android:layout_width="match_parent"
