--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -5,13 +5,17 @@
 
 <LinearLayout
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/textTurns"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:text="Tour"
-        android:id="@+id/textTurns"/>
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:textSize="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
