--- a/app/src/main/res/layout/end_game.xml
+++ b/app/src/main/res/layout/end_game.xml
@@ -3,6 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,5 +17,5 @@
         android:layout_height="wrap_content"
         android:id="@+id/replayButton"
         android:text="REJOUER"/>
-
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
