--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,13 +12,13 @@
         android:id="@+id/textTurns"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Tour"
-        android:textSize="20dp" />
+        android:textSize="10dp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="OOOO"
+        android:textSize="20dp"
+        android:gravity="center"
         android:id="@+id/activeRule"/>
 </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
