--- a/app/src/main/res/layout/player_list_adapter.xml
+++ b/app/src/main/res/layout/player_list_adapter.xml
@@ -9,6 +9,9 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.9"
         android:layout_marginTop="10dp"
-        android:id="@+id/textView" />
+        android:id="@+id/textView"
+        android:fontFamily="@font/anotherdayinparadise"
+        android:textSize="25sp"
+        android:textColor="#FFFFFF"/>
 
 </LinearLayout>
