--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,30 +5,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.leove.beeramide.MainActivity">
+    tools:context="com.example.leove.beeramide.MainActivity"
+    android:background="#00729f">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginLeft="40sp"
+        android:layout_marginRight="40sp"
+        android:layout_marginBottom="10sp"
+        android:layout_marginTop="10sp">
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:text="BEERAMIDE"
-            android:textSize="40dp" />
+            android:text="Beeramide"
+            android:textColor="#FFFFFF"
+            android:textSize="50dp"
+            android:fontFamily="@font/anotherdayinparadise" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:text="PLAYER NAME"
-            android:textSize="20dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,13 +38,19 @@
                 android:id="@+id/player_name"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.8" />
+                android:layout_weight="0.8"
+                android:fontFamily="@font/anotherdayinparadise"
+                android:textSize="25sp"/>
 
-            <Button
+            <ImageButton
                 android:id="@+id/add_player"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.2" />
+                android:layout_height="50sp"
+                android:layout_weight="0.2"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:src="@drawable/addicon"/>
 
         </LinearLayout>
 
@@ -67,30 +72,48 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Nombre de tours"/>
+            android:textAlignment="center"
+            android:fontFamily="@font/anotherdayinparadise"
+            android:textSize="25sp"
+            android:text="Nombre de tours :"
+            android:textColor="#FFFFFF"/>
 
         <NumberPicker
             android:id="@+id/numberPicker"
-            android:layout_width="match_parent"
+            android:layout_width="120sp"
             android:layout_height="0dp"
-            android:layout_weight="0.5"></NumberPicker>
+            android:layout_weight="0.3"></NumberPicker>
 
 
-        <Button
-            android:id="@+id/go_add_rule"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:text="ADD RULE" />
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/start_game"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:text="START GAME" />
+            <Button
+                android:id="@+id/go_add_rule"
+                android:layout_width="0sp"
+                android:layout_weight="50"
+                android:layout_height="wrap_content"
+                android:text="Ajouter une règle"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                android:backgroundTint="#79de8e"
+                android:fontFamily="@font/anotherdayinparadise" />
+
+            <Button
+                android:id="@+id/start_game"
+                android:layout_width="0sp"
+                android:layout_weight="50"
+                android:layout_height="wrap_content"
+                android:text="Commencer"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                android:backgroundTint="#79de8e"
+                android:fontFamily="@font/anotherdayinparadise" />/>
+
+        </LinearLayout>
+
 
 
 
