--- a/app/src/main/res/layout/add_rule_activity.xml
+++ b/app/src/main/res/layout/add_rule_activity.xml
@@ -50,6 +50,22 @@ tools:context="com.example.leove.beeramide.AddRuleActivity">
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Repeatable : "/>
+
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/repeatSwitch"/>
+    </LinearLayout>
+
 
 
 <ScrollView
