--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.8"
+                android:textColor="#FFF"
                 android:fontFamily="@font/anotherdayinparadise"
                 android:textSize="25sp"/>
 
