--- a/app/src/main/res/layout/add_rule_activity.xml
+++ b/app/src/main/res/layout/add_rule_activity.xml
@@ -6,49 +6,72 @@ xmlns:tools="http://schemas.android.com/tools"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
+    android:background="#00729f"
 tools:context="com.example.leove.beeramide.AddRuleActivity">
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginLeft="40sp"
+    android:layout_marginRight="40sp"
+    android:layout_marginBottom="10sp"
+    android:layout_marginTop="10sp">
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="Ajouter une règle"
+        android:textColor="#FFF"
+        android:fontFamily="@font/anotherdayinparadise"
+        android:textSize="40sp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#FFF"
+        android:fontFamily="@font/anotherdayinparadise"
+        android:layout_marginTop="10sp"
+        android:text="En suivant le même pattern que les règles déjà existantes, créez les votre en écrivant Player1, 2, 3 ou 4 lorsque vous voulez y insérer des joueurs choisis aléatoirement lors de vos parties."
+        android:textSize="23sp"/>
 
-        android:text="ADD A RULE"
-        android:textSize="40dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="En suivant le même patterne que les règles déjà existantes, créez les votre en écrivant Player1, 2, 3 ou 4 lorsque vous voulez y insérer des joueurs choisis aléatoirement lors de vos parties."
-        android:textSize="20dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1sp"
+        android:layout_marginTop="20sp"
+        android:layout_marginBottom="20sp"
+        android:background="#FFFFFF"></View>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="50sp"
         android:orientation="horizontal">
 
 
         <EditText
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.8"
+            android:layout_weight="0.70"
+            android:fontFamily="@font/anotherdayinparadise"
+            android:textColor="#FFF"
             android:id="@+id/newRule" />
 
-
         <Button
-            android:layout_width="0dp"
+            android:layout_width="0sp"
             android:layout_height="match_parent"
-            android:layout_weight="0.2"
+            android:layout_weight="0.30"
             android:id="@+id/add_rule"
-            android:text="ADD"/>
+            android:textSize="20sp"
+            android:backgroundTint="#79de8e"
+            android:fontFamily="@font/anotherdayinparadise"
+            android:textAllCaps="false"
+            android:text="Ajouter"/>
+
 
     </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,13 +81,22 @@ tools:context="com.example.leove.beeramide.AddRuleActivity">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Repeatable : "/>
+            android:textColor="#FFF"
+            android:text="Répétable : "/>
 
         <Switch
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/repeatSwitch"/>
     </LinearLayout>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1sp"
+        android:layout_marginTop="20sp"
+        android:layout_marginBottom="20sp"
+        android:background="#FFFFFF"></View>
 
 
 
@@ -88,6 +120,10 @@ tools:context="com.example.leove.beeramide.AddRuleActivity">
         android:layout_height="wrap_content"
         android:text="Retour"
         android:id="@+id/retour"
+        android:backgroundTint="#79de8e"
+        android:textAllCaps="false"
+        android:fontFamily="@font/anotherdayinparadise"
+        android:textSize="30sp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
