--- a/app/src/main/res/layout/end_game.xml
+++ b/app/src/main/res/layout/end_game.xml
@@ -1,21 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#00729f"
+    >
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginLeft="40sp"
+        android:layout_marginRight="40sp"
+        android:layout_marginBottom="10sp"
+        android:layout_marginTop="10sp">
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="PARTIE TERMINEE ! Les deux photos ont été enregistrées dans votre galerie."/>
+        android:layout_height="0sp"
+        android:layout_weight="50"
+        android:gravity="center"
+        android:textSize="25sp"
+        android:fontFamily="@font/anotherdayinparadise"
+        android:textAlignment="center"
+        android:textColor="#FFF"
+        android:text="Merci d'avoir utilisé Beeramide !"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/replayButton"
-        android:text="REJOUER"/>
+        android:backgroundTint="#79de8e"
+        android:textSize="25sp"
+        android:fontFamily="@font/anotherdayinparadise"
+        android:textAllCaps="false"
+        android:layout_gravity="center"
+        android:text="Rejouer"/>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
